# python-swarmui

./: .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml  run.py  setup.py
config/: settings.yaml
src/swarmui_clone/: app_state.py  config.py  main.py  schemas.py
src/swarmui_clone/api/: routes.py
src/swarmui_clone/services/: comfy_client.py  comfy_launcher.py  generation.py  model_index.py  settings_service.py  wildcards.py  workflow_builder.py
src/swarmui_clone/static/css/: app.css
src/swarmui_clone/static/js/: app.js
src/swarmui_clone/utils/: logging_utils.py  pathing.py
tests/: test_api_compat.py  test_app_root.py  test_comfy_model_yaml.py  test_generation_service.py  test_preflight.py  test_settings_service.py  test_wildcards.py  test_workflow_builder.py
